<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/register_action"
            android:textColor="@color/colorPrimaryString"
            android:layout_gravity="center"
            android:textSize="35sp"/>
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/email"
            android:textColorHint="@color/colorScondaryString"
            android:textColor="@color/colorPrimaryString"
            android:inputType="textEmailAddress"/>
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/prompt_password"
            android:textColorHint="@color/colorScondaryString"
            android:textColor="@color/colorPrimaryString"
            android:inputType="textPassword"/>
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_confirm_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/colorScondaryString"
            android:textColor="@color/colorPrimaryString"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/btn_register"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:layout_marginBottom="@dimen/raised_margin_bottom"
            android:layout_gravity="center"
            android:text="@string/action_accept"
            android:textColor="@color/colorLightString"
            android:background="@drawable/button_rounded_buttons"
            android:elevation="2dp"/>
    </LinearLayout>
</ScrollView>