<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/linear_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.leon.daniel.grp1.ProfileActivity"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/iv_profile_picture"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:scaleType="fitXY"
            android:background="@drawable/profile_image_shape"
            android:contentDescription="@string/profile_image"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryString">
            <AutoCompleteTextView
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColor="@color/colorPrimaryString"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryString">
            <AutoCompleteTextView
                android:id="@+id/et_last1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:textColor="@color/colorPrimaryString"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryString">
            <AutoCompleteTextView
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textColor="@color/colorPrimaryString"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryString">
            <AutoCompleteTextView
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:textColor="@color/colorPrimaryString"
                android:inputType="phone"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryString">
            <AutoCompleteTextView
                android:id="@+id/et_cellphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/celphone"
                android:textColor="@color/colorPrimaryString"
                android:inputType="phone"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/bt_continue_profile"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="@dimen/raised_margin_bottom"
            android:layout_gravity="center"
            android:text="@string/update_info_action"
            android:textColor="@color/colorLightString"
            android:background="@drawable/button_rounded_buttons"
            android:elevation="2dp"/>
    </LinearLayout>
</ScrollView>